--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,17 +1,14 @@
 .form {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   padding: 20px;
 }
 
-.input {
-  width: 100%;
-  padding: 10px;
-  margin-top: 15px;
-}
-
+.input,
 .select {
+  width: 80%;
   padding: 10px;
   margin-top: 15px;
 }
